--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,11 +24,11 @@ jobs:
       with:
         go-version: '^1.17.7'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Create module
+      run: go mod init
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v
 
   #
   # Job build-1-16
@@ -47,8 +47,8 @@ jobs:
       with:
         go-version: '^1.16.7' # The version AlmaLinux 8.5 uses
 
-    - name: Build
-      run: go build -v ./...
+    - name: Create module
+      run: go mod init
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v
