--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
         go-version: '^1.17.7'
 
     - name: Create module
-      run: go mod init
+      run: go mod init github.com/ClusterCockpit/cc-units
 
     - name: Test
       run: go test -v
@@ -48,7 +48,7 @@ jobs:
         go-version: '^1.16.7' # The version AlmaLinux 8.5 uses
 
     - name: Create module
-      run: go mod init
+      run: go mod init github.com/ClusterCockpit/cc-units
 
     - name: Test
       run: go test -v
