--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,6 +8,29 @@ on: push
 
 jobs:
   #
+  # Job build-1-18
+  # Build on latest Ubuntu using golang version 1.18
+  #
+  build-1-18:
+    runs-on: ubuntu-latest
+    steps:
+    # See: https://github.com/marketplace/actions/checkout
+    # Checkout git repository and submodules
+    - uses: actions/checkout@v2
+
+    # See: https://github.com/marketplace/actions/setup-go-environment
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: '^1.18.2'
+
+    - name: Create module
+      run: go build
+
+    - name: Test
+      run: go test -v
+
+  #
   # Job build-1-17
   # Build on latest Ubuntu using golang version 1.17
   #
@@ -20,12 +43,12 @@ jobs:
 
     # See: https://github.com/marketplace/actions/setup-go-environment
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
         go-version: '^1.17.7'
 
     - name: Create module
-      run: go mod init github.com/ClusterCockpit/cc-units
+      run: go build
 
     - name: Test
       run: go test -v
@@ -43,12 +66,12 @@ jobs:
 
     # See: https://github.com/marketplace/actions/setup-go-environment
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
         go-version: '^1.16.7' # The version AlmaLinux 8.5 uses
 
     - name: Create module
-      run: go mod init github.com/ClusterCockpit/cc-units
+      run: go build
 
     - name: Test
       run: go test -v
